Fix absolute path to the sync script for Amazon.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -230,7 +230,8 @@
     <add key="TD_SiteStats_ImpressionThreshold" value="100" /><!-- min # of impressions (n/a if conversions>0) -->
 
     <!--Syncher sql scripts configuration -->
-    <add key="AmazonAmsAsinSyncScriptPath" value="./SQL/AMS/SyncAsinAnalyticTable.sql" />
+    <add key="AmazonAmsAsinSyncScriptPath" value="SQL\AMS" />
+    <add key="AmazonAmsAsinSyncScriptName" value="SyncAsinAnalyticTable.sql" />
 
     <!--Commission Junction Configuration-->
     <add key="CJAccessToken" value="" /> <!--DA ETL Commision Junction Token (lburgor)-->
