The Amazon account "Walker & Company" was moved to e-mail "amazonaccess@directagents.com".

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -67,8 +67,8 @@
     <add key="AmazonReportsBaseFolder" value="C:\Reports\Amazon\Reports" />
     <add key="Amazon_Alt1" value="3697485300977692" /><!-- AvoDerm -->
     <add key="AmazonAuthCode_Alt1" value="" /><!-- granted access to brendan's account -->
-    <add key="Amazon_Alt2" value="506658790463709,2809006642760398,272960003405959,3257737750060910,4345920503201491,1933796952401802,57656933593201,3698781704372872,377243268827098" />
-    <!-- Carhartt Sportswear - Mens, Carhartt Women's Collection, Sourcenext, Inc., Master & Dynamic AMS - US, UK, Spain, Italy, Germany, France  -->
+    <add key="Amazon_Alt2" value="506658790463709,2809006642760398,272960003405959,3051891166301572,3257737750060910,4345920503201491,1933796952401802,57656933593201,3698781704372872,377243268827098" />
+    <!-- Carhartt Sportswear - Mens, Carhartt Women's Collection, Sourcenext, Inc., Walker & Company, Master & Dynamic AMS - US, UK, Spain, Italy, Germany, France  -->
     <add key="AmazonAuthCode_Alt2" value="" /><!-- granted access to amazonaccess@directagents.com account -->
     <add key="Amazon_Alt3" value="3335990284144083" /><!-- Living Fresh (this is not Amazon name) -->
     <add key="AmazonAuthCode_Alt3" value="" /><!-- granted access to livingfresh@directagents.com account -->
