Added retry wait and logic for request of Cake Event Conversions.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -275,7 +275,10 @@
 
     <!--Automated shut down mechanism configuration -->
     <add key="CommandMaxExecutionTimeInHours_Default" value="10" />
-    
+
+    <add key="CakeEventConversions_MaxRetryAttempts" value="15"/>
+    <add key="CakeEventConversions_PauseBetweenAttemptsInSeconds" value="60"/>
+
   </appSettings>
   <system.serviceModel>
     <bindings>
