--- a/3/CakeExtracter.ConsoleApplication/CakeExtracter.ConsoleApplication.csproj
+++ b/3/CakeExtracter.ConsoleApplication/CakeExtracter.ConsoleApplication.csproj
@@ -211,16 +211,16 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Email\JobErrorOccuredBody.html">
+    <Content Include="Email\JobErrorOccuredBody.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Email\JobErrorOccuredSubject.html">
+    <Content Include="Email\JobErrorOccuredSubject.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Email\JobFailedBody.html">
+    <Content Include="Email\JobFailedBody.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Email\JobFailedSubject.html">
+    <Content Include="Email\JobFailedSubject.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="SQL\AMS\CreateAsinAnalyticTable.sql">
