--- a/3/CakeExtracter.ConsoleApplication/CakeExtracter.ConsoleApplication.csproj
+++ b/3/CakeExtracter.ConsoleApplication/CakeExtracter.ConsoleApplication.csproj
@@ -211,6 +211,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\DirectAgents.Web\packages\Selenium.Chrome.WebDriver.75.0.0\driver\chromedriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Email\JobErrorOccuredBody.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
