Added the ability to get Adform stats with not only RTB media, but also with RTB + DBM + YAM + TTD media. And added parameter "Adform_AccountsWithSeveralMedia" to config to specify external ids of accounts that should get stats with several media.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -202,6 +202,7 @@
     <add key="Adform_Alt1" value="147033,148569,148570,148571" /><!-- Shutterstock(4) -->
     <add key="AdformClientID_Alt1" value="" />
     <add key="AdformClientSecret_Alt1" value="" />
+    <add key="Adform_AccountsWithSeveralMedia" value="32209"/><!--RTB,DBM,TTD,YAM media--><!--Course Hero-->
     <add key="Adform_OrderInsteadOfCampaign" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsWithSpecificTracking" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsTrackingIds" value="103625" /><!--Bevel Conversions ALL-->
