--- a/3/API/Adform/Adform.csproj
+++ b/3/API/Adform/Adform.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\MediaName.cs" />
     <Compile Include="Entities\ReportEntities\ReportParameters\Media.cs" />
     <Compile Include="Entities\ReportEntities\ReportParameters\ReportFilter.cs" />
     <Compile Include="Entities\ReportEntities\ReportParameters\ReportFilterWithTracking.cs" />
