--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -110,6 +110,10 @@
     <Compile Include="MigrationsTD\201907111300498_Mig_DbmCountry.Designer.cs">
       <DependentUpon>201907111300498_Mig_DbmCountry.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909260109417_Mig_Affiliate_AccountManager.cs" />
+    <Compile Include="Migrations\201909260109417_Mig_Affiliate_AccountManager.Designer.cs">
+      <DependentUpon>201909260109417_Mig_Affiliate_AccountManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="SpecialPlatformsDataProviders\Facebook\IFacebookWebPortalDataService.cs" />
     <Compile Include="Abstract\IMainRepository.cs" />
     <Compile Include="Abstract\IPlatformAccountRepository.cs" />
@@ -1198,6 +1202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201904252123496_Mig_EventConv_TransactionId.resx">
       <DependentUpon>201904252123496_Mig_EventConv_TransactionId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909260109417_Mig_Affiliate_AccountManager.resx">
+      <DependentUpon>201909260109417_Mig_Affiliate_AccountManager.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
