--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -114,6 +114,10 @@
     <Compile Include="MigrationsTD\201909261143087_Mig_DbmFloodlightActivityName.Designer.cs">
       <DependentUpon>201909261143087_Mig_DbmFloodlightActivityName.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201910011335596_Mig_DbmAddIdForSummaryTables.cs" />
+    <Compile Include="MigrationsTD\201910011335596_Mig_DbmAddIdForSummaryTables.Designer.cs">
+      <DependentUpon>201910011335596_Mig_DbmAddIdForSummaryTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
       <DependentUpon>201909270822065_Mig_Affiliate_AccountManager.cs</DependentUpon>
@@ -1140,6 +1144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201909261143087_Mig_DbmFloodlightActivityName.resx">
       <DependentUpon>201909261143087_Mig_DbmFloodlightActivityName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201910011335596_Mig_DbmAddIdForSummaryTables.resx">
+      <DependentUpon>201910011335596_Mig_DbmAddIdForSummaryTables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
