Update Bing SDK to version 12.13.4.0 (API v.13).

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -95,7 +95,7 @@
     <add key="BingClientId" value="" />
     <add key="BingApiUsername" value="" />
     <add key="BingApiPassword" value="" />
-    <add key="BingRedirectionUri" value="https://login.live.com/oauth20_desktop.srf" />
+    <add key="BingRedirectionUri" value="https://login.microsoftonline.com/common/oauth2/nativeclient" />
     <add key="BingReportFolder" value="C:\Reports\Bing" />
     <add key="BingReportFilename" value="bingrep.zip" />
     <add key="BingIntervalBetweenRequestsInMinutes" value="60" />
