Update Bing SDK version from 12.13.4.0 to 12.13.5.0.

--- a/3/BingAds/packages.config
+++ b/3/BingAds/packages.config
@@ -1,13 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.BingAds.SDK" version="12.13.4" targetFramework="net461" />
+  <package id="Microsoft.BingAds.SDK" version="12.13.5" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
   <package id="System.ServiceModel.Http" version="4.5.3" targetFramework="net461" />
   <package id="System.ServiceModel.Primitives" version="4.5.3" targetFramework="net461" />
   <package id="WatiN" version="2.1.0" targetFramework="net45" />
