--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -162,6 +162,18 @@
         <assemblyIdentity name="Google.Ads.Common" publicKeyToken="52807268f2b614dc" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-9.5.1.0" newVersion="9.5.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.2.0" newVersion="1.1.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <AdWordsApi>
