Adform: adding the new metric "Unique impressions" for all levels.

--- a/3/API/Adform/Adform.csproj
+++ b/3/API/Adform/Adform.csproj
@@ -37,6 +37,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>..\..\DirectAgents.Web\CodeAnalysis\codeanalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Polly">
