Added pulling Unique Impressions metric without the media type filter only for those accpunts that specified in value of config parameter "Adform_AccountsWithAllMediaUniqueImpressions".

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -205,6 +205,7 @@
     <add key="Adform_OrderInsteadOfCampaign" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsWithSpecificTracking" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsTrackingIds" value="103625" /><!--Bevel Conversions ALL-->
+    <add key="Adform_AccountsWithAllMediaUniqueImpressions" value="2047872"/><!--Belkin-->
     <add key="AdformMaxPollingRetryAttempt" value="5" />
     <add key="AdformUnauthorizedAttemptsNumber" value="1" />
     <add key="AdformMaxAttemptsNumber" value="3" />
