--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -132,6 +132,10 @@
     <Compile Include="MigrationsTD\201910231135310_Mig_FacebookAddReachMetric.Designer.cs">
       <DependentUpon>201910231135310_Mig_FacebookAddReachMetric.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201911141223563_Mig_AdformNewDbTables.cs" />
+    <Compile Include="MigrationsTD\201911141223563_Mig_AdformNewDbTables.Designer.cs">
+      <DependentUpon>201911141223563_Mig_AdformNewDbTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
       <DependentUpon>201909270822065_Mig_Affiliate_AccountManager.cs</DependentUpon>
@@ -1164,6 +1168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201910231135310_Mig_FacebookAddReachMetric.resx">
       <DependentUpon>201910231135310_Mig_FacebookAddReachMetric.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201911141223563_Mig_AdformNewDbTables.resx">
+      <DependentUpon>201911141223563_Mig_AdformNewDbTables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
