--- a/3/API/Adform/Adform.csproj
+++ b/3/API/Adform/Adform.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Enums\AdInteractionType.cs" />
     <Compile Include="Enums\ConversionMetric.cs" />
     <Compile Include="Enums\Dimension.cs" />
-    <Compile Include="Entities\AdformSummary.cs" />
+    <Compile Include="Entities\AdformReportSummary.cs" />
     <Compile Include="Helpers\AdformApiHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
