--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -648,16 +648,16 @@
     <Compile Include="Etl\Facebook\Loaders\FacebookAdSetSummaryLoaderV2.cs" />
     <Compile Include="Etl\Facebook\Loaders\FacebookAdSummaryLoaderV2.cs" />
     <Compile Include="Etl\Facebook\Loaders\FacebookCampaignSummaryLoaderV2.cs" />
-    <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformAdSetSummaryExtracter.cs" />
-    <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformDailySummaryExtracter.cs" />
-    <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformApiBaseExtractor.cs" />
-    <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformStrategySummaryExtracter.cs" />
-    <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformTDadSummaryExtracter.cs" />
+    <Compile Include="Etl\Adform\Extractors\AdformAdSetSummaryExtracter.cs" />
+    <Compile Include="Etl\Adform\Extractors\AdformDailySummaryExtracter.cs" />
+    <Compile Include="Etl\Adform\Extractors\AdformApiBaseExtractor.cs" />
+    <Compile Include="Etl\Adform\Extractors\AdformStrategySummaryExtracter.cs" />
+    <Compile Include="Etl\Adform\Extractors\AdformTDadSummaryExtracter.cs" />
     <Compile Include="Etl\Amazon\Extractors\AmazonApiExtractors\AmazonCampaignMetadataExtractor.cs" />
     <Compile Include="Etl\Amazon\Extractors\AmazonApiExtractors\AmazonDatabaseKeywordsToDailySummaryExtractor.cs" />
     <Compile Include="Etl\Amazon\Extractors\AmazonApiExtractors\AmazonApiKeywordExtractor.cs" />
     <Compile Include="Etl\Amazon\Extractors\BaseAmazonExtractor.cs" />
-    <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformTransformers.cs" />
+    <Compile Include="Etl\Adform\AdformReportDataTransformer.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdRollAdExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdrollSiteStatsCsvExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\CPCExtracter.cs" />
@@ -1051,7 +1051,9 @@
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Etl\TradingDesk\Extracters\AdformExtractors\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
