--- a/3/API/Adform/Adform.csproj
+++ b/3/API/Adform/Adform.csproj
@@ -59,6 +59,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\ResponseStatus.cs" />
+    <Compile Include="Outdated\Constants\MediaName.cs" />
+    <Compile Include="Outdated\Entities\AdformSummary.cs" />
+    <Compile Include="Outdated\Entities\ReportEntities\ReportData.cs" />
+    <Compile Include="Outdated\Entities\ReportEntities\ReportParameters\Media.cs" />
+    <Compile Include="Outdated\Entities\ReportEntities\ReportParameters\ReportParams.cs" />
+    <Compile Include="Outdated\Entities\ReportEntities\ReportResponse.cs" />
+    <Compile Include="Outdated\Entities\ReportSettings.cs" />
+    <Compile Include="Outdated\Enums\AdInteractionType.cs" />
+    <Compile Include="Outdated\Enums\Dimension.cs" />
+    <Compile Include="Outdated\Helpers\AdformApiHelper.cs" />
+    <Compile Include="Outdated\Utilities\AdformLogger.cs" />
+    <Compile Include="Outdated\Utilities\AdformUtility.cs" />
     <Compile Include="Utilities\AdformLogger.cs" />
     <Compile Include="Utilities\AdformUtility.cs" />
     <Compile Include="Entities\ReportEntities\ReportParameters\MetricMetadata.cs" />
@@ -94,6 +106,7 @@
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
