Added old config parameters

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -201,17 +201,19 @@
     <add key="Adform_Alt1" value="147033,148569,148570,148571" /><!-- Shutterstock(4) -->
     <add key="AdformClientID_Alt1" value="" />
     <add key="AdformClientSecret_Alt1" value="" />
-    <add key="Adform_AccountsWithMultipleMedia" value="32209"/><!--RTB,DBM,TTD,YAM media--><!--Course Hero-->
     <add key="Adform_OrderInsteadOfCampaign" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsWithSpecificTracking" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsTrackingIds" value="103625" /><!--Bevel Conversions ALL-->
-    <add key="Adform_AccountsWithAllMedia" value="2053119"/><!--All media--><!--Colgate-->
-    <add key="Adform_AccountsWithAllMediaUniqueImpressions" value="2047872"/><!--Belkin-->
     <add key="AdformMaxPollingRetryAttempt" value="5" />
     <add key="AdformUnauthorizedAttemptsNumber" value="1" />
     <add key="AdformMaxAttemptsNumber" value="3" />
     <add key="AdformQuotaLimitAttemptsNumber" value="10" />
     <add key="AdformPauseBetweenPollingAttemptsSeconds" value="65" />
+
+    <!--Outdated-->
+    <add key="Adform_AccountsWithMultipleMedia" value="32209"/><!--RTB,DBM,TTD,YAM media--><!--Course Hero-->
+    <add key="Adform_AccountsWithAllMedia" value="2053119"/><!--All media--><!--Colgate-->
+    <add key="Adform_AccountsWithAllMediaUniqueImpressions" value="2047872"/><!--Belkin-->
 
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v2/" />
     <!-- the job expects the certificate at this path. -->
