--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Entities\CPProg\Adform\AdfBaseEntity.cs" />
     <Compile Include="Entities\CPProg\Adform\AdfMediaType.cs" />
     <Compile Include="Entities\CPProg\Adform\Summaries\AdfLineItemSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbReachMetric.cs" />
     <Compile Include="MigrationsTD\201905311144009_Mig_ErrorEmailSentProperty.cs" />
     <Compile Include="MigrationsTD\201905311144009_Mig_ErrorEmailSentProperty.Designer.cs">
       <DependentUpon>201905311144009_Mig_ErrorEmailSentProperty.cs</DependentUpon>
@@ -135,6 +136,10 @@
     <Compile Include="MigrationsTD\201911201133166_Mig_AdformNewDbTables.cs" />
     <Compile Include="MigrationsTD\201911201133166_Mig_AdformNewDbTables.Designer.cs">
       <DependentUpon>201911201133166_Mig_AdformNewDbTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsTD\201911291635045_Mig_FacebookAddSeparatedReachMetric.cs" />
+    <Compile Include="MigrationsTD\201911291635045_Mig_FacebookAddSeparatedReachMetric.Designer.cs">
+      <DependentUpon>201911291635045_Mig_FacebookAddSeparatedReachMetric.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
@@ -1171,6 +1176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201911201133166_Mig_AdformNewDbTables.resx">
       <DependentUpon>201911201133166_Mig_AdformNewDbTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201911291635045_Mig_FacebookAddSeparatedReachMetric.resx">
+      <DependentUpon>201911291635045_Mig_FacebookAddSeparatedReachMetric.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
