--- a/3/API/FacebookAPI/FacebookAPI.csproj
+++ b/3/API/FacebookAPI/FacebookAPI.csproj
@@ -60,23 +60,29 @@
     <Compile Include="Converters\AdInsigthsFacebookSummaryConverter.cs" />
     <Compile Include="Converters\AdSetInsigthsFacebookSummaryConverter.cs" />
     <Compile Include="Converters\DailyInsigthsFacebookSummaryConverter.cs" />
+    <Compile Include="Converters\FacebookReachMetricConverter.cs" />
     <Compile Include="Converters\FacebookSummaryConverter.cs" />
+    <Compile Include="Converters\IFacebookConverter.cs" />
     <Compile Include="Converters\StrategyInsigthsFacebookSummaryConverter.cs" />
     <Compile Include="Entities\FBAction.cs" />
     <Compile Include="Api\FacebookJobRequest.cs" />
     <Compile Include="Api\Filter.cs" />
-    <Compile Include="BaseFacebookDataProvider.cs" />
+    <Compile Include="Enums\ReachPeriod.cs" />
+    <Compile Include="Providers\BaseFacebookDataProvider.cs" />
     <Compile Include="Entities\AdDataEntities\AdCreativeData.cs" />
     <Compile Include="Entities\AdDataEntities\Creative.cs" />
+    <Compile Include="Entities\FbReachRow.cs" />
     <Compile Include="Entities\FBSummary.cs" />
     <Compile Include="Enums\AttributionWindowType.cs" />
     <Compile Include="Enums\AttributionWindowValue.cs" />
     <Compile Include="Enums\ConversionActionType.cs" />
     <Compile Include="Enums\PlatformFilter.cs" />
-    <Compile Include="FacebookAdMetadataProvider.cs" />
-    <Compile Include="FacebookInsightsDataProvider.cs" />
+    <Compile Include="Providers\FacebookAdMetadataProvider.cs" />
+    <Compile Include="Providers\FacebookInsightsDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\FacebookInsightsReachMetricProvider.cs" />
     <Compile Include="Utils\ConfigurationUtils.cs" />
+    <Compile Include="Helpers\FacebookReachPeriodHelper.cs" />
     <Compile Include="Utils\FacebookRequestUtils.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -97,6 +103,7 @@
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
