--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -496,6 +496,7 @@
     <Compile Include="Common\StorageCollection.cs" />
     <Compile Include="Common\TextUtils.cs" />
     <Compile Include="Common\DIKernel.cs" />
+    <Compile Include="Etl\Adform\Exceptions\AdformFailedStatsLoadingException.cs" />
     <Compile Include="Etl\Adform\Loaders\AdfBannerSummaryLoader.cs" />
     <Compile Include="Etl\Adform\Loaders\AdfBaseSummaryLoader.cs" />
     <Compile Include="Etl\Adform\Loaders\AdfCampaignSummaryLoader.cs" />
