Added relaunch mechanism for Adform job.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -209,6 +209,7 @@
     <add key="AdformMaxAttemptsNumber" value="3" />
     <add key="AdformQuotaLimitAttemptsNumber" value="10" />
     <add key="AdformPauseBetweenPollingAttemptsSeconds" value="65" />
+    <add key="AdformIntervalBetweenRequestsInMinutes" value="10"/>
 
     <!--Outdated-->
     <add key="Adform_AccountsWithMultipleMedia" value="32209"/><!--RTB,DBM,TTD,YAM media--><!--Course Hero-->
