temp commit. Update AmazonApiExtractor, update AmazonApiReportParam.

--- a/3/API/Amazon/Amazon.csproj
+++ b/3/API/Amazon/Amazon.csproj
@@ -85,7 +85,9 @@
   <ItemGroup>
     <Compile Include="AwsFilesDownloader.cs" />
     <Compile Include="Entities\AmazonProfile.cs" />
+    <Compile Include="Entities\HelperEntities\AmazonApiReportSdParams.cs" />
     <Compile Include="Entities\HelperEntities\AmazonApiReportParams.cs" />
+    <Compile Include="Entities\HelperEntities\AmazonApiReportSbAndSpParams.cs" />
     <Compile Include="Entities\HelperEntities\AmazonApiSnapshotParams.cs" />
     <Compile Include="Entities\Summaries\AmazonAsinSummaries.cs" />
     <Compile Include="Entities\HelperEntities\GetTokenResponse.cs" />
