Added the "AmazonLoadingBatchSize" parameter to config file for managing of that value.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -63,6 +63,7 @@
     <add key="AmazonFailedRequestAttemptsNumber" value="10" />
     <add key="AmazonIntervalBetweenRequestsInMinutes" value="40" />
     <add key="AmazonAuthCode" value="" /><!-- granted access to ronnie's account -->
+    <add key="AmazonLoadingBatchSize" value="1000"/>
     <add key="AmazonRefreshToken" value="" />
     <add key="AmazonReportsBaseFolder" value="C:\Reports\Amazon\Reports" />
     <add key="Amazon_Alt1" value="3697485300977692" /><!-- AvoDerm -->
